try again with pylint wildcard; add docstrings to some board properties

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ install:
   - pip install circuitpython-build-tools Sphinx sphinx-rtd-theme
 
 script:
-  - pylint adafruit_platformdetect/**/*.py
+  - pylint adafruit_platformdetect/**.py
   - ([[ ! -d "examples" ]] || pylint --disable=missing-docstring,invalid-name,bad-whitespace examples/*.py)
   - cd docs && sphinx-build -E -W -b html . _build/html && cd ..
