disable sphinx for the moment

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ install:
 script:
   - pylint adafruit_platformdetect/**.py
   - ([[ ! -d "examples" ]] || pylint --disable=missing-docstring,invalid-name,bad-whitespace examples/*.py)
-  - cd docs && sphinx-build -E -W -b html . _build/html && cd ..
+# - cd docs && sphinx-build -E -W -b html . _build/html && cd ..
