--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       if: contains(steps.need-pypi.outputs.pyproject.toml, 'pyproject.toml')
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip build
         pip install --upgrade build twine
     - name: Build and publish
       if: contains(steps.need-pypi.outputs.pyproject-toml, 'pyproject.toml')
